使用新的缓存机制并支持分布式加载

--- a/src/frames/dashboard/style/var.less
+++ b/src/frames/dashboard/style/var.less
@@ -1,7 +1,7 @@
 @bg: #f5f7fb;
 // @primary: #009a61;
-// @primary: #2d89ef;
-@primary: #d9534f;
+@primary: #2d89ef;
+// @primary: #d9534f;
 
 @topBarH: 54px;
 @TabsH: 34px;
